# um_from_etudes

./: CMakeLists.txt  CMakeLists.txt.user.5203ebb  CMakeLists.txt.user.ec87749  CMakeLists.txt.user.ef43924  Command.cpp  Command.h  Loader.cpp  Memory.cpp  Memory.h  Operation.h  Processor.cpp  Processor.h  README.md  Types.h  debugger.cpp  debugger.h  except.h  logs.cpp  logs.h  m.h  main.cpp  programm  psw.cpp  psw.h
Commands/: arithmeticcommands.cpp  arithmeticcommands.h  comparecommands.cpp  comparecommands.h  logicalcommands.cpp  logicalcommands.h  memorycommands.cpp  memorycommands.h  othercommands.cpp  othercommands.h  shiftcommands.cpp  shiftcommands.h  transitioncommands.cpp  transitioncommands.h
